--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -1,10 +1,10 @@
 default: &default
   adapter: mysql2
-  encoding: utf8mb4
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: password # デフォルトだと空欄になっているはずなので変更
-  host: db # デフォルトだとlocalhostになっているはずなので変更
+  password:  # デフォルトだと空欄になっているはずなので変更
+  host: localhost # デフォルトだとlocalhostになっているはずなので変更
 
 development:
   <<: *default
