--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -41,3 +41,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 gem 'devise', '4.7.3'
 gem 'devise_token_auth'
+gem "dotenv-rails"
