--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -42,3 +42,8 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'devise', '4.7.3'
 gem 'devise_token_auth'
 gem "dotenv-rails"
+
+gem 'mini_magick'
+gem 'aws-sdk-s3'
+gem 'fog-aws'
+gem "carrierwave"
