--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/uuid": "^8.3.1",
     "axios": "^0.21.1",
     "axios-case-converter": "^0.8.1",
     "js-cookie": "^2.2.1",
@@ -52,6 +53,8 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^2.2.7",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "chart.js": "^3.5.1",
+    "react-chartjs-2": "^3.0.4"
   }
 }
