--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -55,3 +55,6 @@ gem 'line-bot-api'
 # 定期処理用gem
 # アプリケーションから使わないのでrequire: false
 gem 'whenever', require: false
+
+# 暗号化用のgem
+gem "attr_encrypted"
