--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,11 @@
     "axios": "^0.21.1",
     "axios-case-converter": "^0.8.1",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.13.0",
     "react-moment": "^1.1.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
