--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "axios": "^0.21.1",
     "axios-case-converter": "^0.8.1",
     "js-cookie": "^2.2.1",
+    "microcms-js-sdk": "^1.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
