--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stripe-elements": "^6.1.2",
     "react-toastify": "^7.0.4",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
@@ -64,6 +65,7 @@
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^2.2.7",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-stripe-elements": "^6.0.5",
     "chart.js": "^3.5.1",
     "react-chartjs-2": "^3.0.4"
   },
