--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -62,5 +62,8 @@ gem "attr_encrypted"
 # メール送信用のgem
 gem 'sendgrid-ruby'
 
-# 決済処理用
+# 決済処理用のgem
 gem 'stripe' 
+
+# サブスクリプションの決済webhook用のgem
+gem 'stripe_event'
