--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/uuid": "^8.3.1",
     "axios": "^0.21.1",
     "axios-case-converter": "^0.8.1",
+    "clsx": "^1.1.1",
     "escape-string-regexp": "^5.0.0",
     "js-cookie": "^2.2.1",
     "microcms-js-sdk": "^1.2.0",
